# preset-prompt-demo

./: .env.langfuse  .gitignore  README.md  docker-compose.langfuse.yml
backend/: pyproject.toml
backend/app/: main.py  observability.py  providers.py  schemas.py  templates_data.py
backend/tests/: test_api.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: types.ts
