[project]
name = "preset-prompt-backend"
version = "0.1.0"
description = "プリセットプロンプト実行APIのデモ (FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
# pytest はデフォルトでカレントディレクトリを sys.path に入れないため、
# tests/ から `from app.main import ...` できるように明示する
pythonpath = ["."]
